# jetson-monitor-lite

./: Cargo.toml  README.md
src/: info.rs  main.rs
src/monitor/: display.rs  mod.rs
